<resources>
    <string name="app_name">CogStruct</string>
    <string name="thought_journal_title">Thought Journal</string>
    <string name="how_d_i_get_here_title">How\'d I get Here?</string>
    <string name="pros_and_cons_title">Pros and Cons</string>
    <string name="bad_behaviors_title">Bad Behaviors</string>
    <string name="identify_barriers_title">Identify Barriers</string>
    <string name="abcs_title">ABC\'s</string>
    <string name="pros_and_cons_icon_description">Pros and cons icon</string>
    <string name="how_d_i_get_here_icon_description">How\'d I get here icon</string>
    <string name="bad_behaviors_icon_description">Bad behaviors icon</string>
    <string name="abcs_icon_description">ABC\'s icon</string>
    <string name="thought_journal_icon_description">Thought journal icon</string>
    <string name="identify_barriers_icon_description">Identify barriers icon</string>
    <string name="thought_journal_description">Thought journals can help you recognize and change unhelpful thought patterns. The purpose of this exercise is to get you into the habit of paying attention to your thoughts.</string>
    <string name="abcs_description">The ABC\'s stand for Activating events, Beliefs, and Consequences. The purpose of this activity to recognize the link between the things that happen to us, unhelpful beliefs/thoughts, and the consequences of these thoughts and events.</string>
    <string name="bad_behaviors_description">Already identified the unhelpful behavior you\'d like to change? In this activity we will problem solve… and try to prevent the behavior next time an urge pops up!</string>
    <string name="howd_i_get_here_description">This activity can help you analyze the chain of events and reactions that contributed to a behavior step by step. So we can prevent it next time.</string>
    <string name="identify_barriers_description">What about good/effective behaviors? When there was a helpful behavior or action that we planned to do but didn\'t, this activity can helps identify what stopped us from doing it.</string>
    <string name="pros_and_cons_description">This activity can help you look at things objectively by weighing the pros and cons of continuing or stopping engagement in a specific thought, behavior, or habit.</string>
    <string name="suggestion_button_text">Send us a suggestion</string>
    <string name="suggestion_text">Have an idea for an activity you think would be helpful?</string>
    <string name="begin_button_text">Begin!</string>
    <string name="return_button_text">Return</string>
    <string name="next_button_string">Next</string>
    <string name="place_behavior_question">Where did the behavior occur?</string>
    <string name="behavior_time_question">At what time did it occur?</string>
    <string name="morning">Morning</string>
    <string name="noonish">Noonish</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="at_night">At night</string>
    <string name="place_hint">Hint: A specific place, i.e home</string>
    <string name="tj_page_one_title">Situation</string>
    <string name="tj_page_two_title">Details</string>
    <string name="tj_details_hint">Hint: Re-tell the events that occurred objectively, as if you are watching them in a movie</string>
    <string name="tj_details_question"> Optional: What happened before you engaged in the behavior?</string>
    <string name="back_button_text">Back</string>
    <string name="tj_page_three_title">Behavior</string>
    <string name="tj_behavior_description">What is the unhelpful behavior or action that you engaged in?</string>
    <string name="tj_page_one_who_question">Who were you with?</string>
    <string name="tj_page_one_people_hint">If you weren\'t alone, enter who you were with.</string>
    <string name="with_others">With others</string>
    <string name="alone">Alone</string>
    <string name="tj_thoughts_description">What was going through your mind at the moment? </string>
    <string name="thoughts_title">Thoughts</string>
    <string name="tj_thoughts_image_description">Thought Bubble Image</string>
    <string name="tj_movie_image_description">Movie Image</string>
    <string name="tj_emotion_description">What is the main emotion you experienced at the time?</string>
    <string name="review_button_text">Review</string>
    <string name="general_review_title">Review</string>
    <string name="tj_review_description">Review Your Answers</string>
    <string name="submit_button">Submit</string>
    <string name="edit_button">Edit</string>
    <string name="thoughts_review_question">What were my thoughts?</string>
    <string name="details_review_question">Details:</string>
    <string name="intensity_review_question">Intensity:</string>
    <string name="main_emotion_review_question">Main emotion:</string>
    <string name="emotion_review_question">What did I feel?</string>
    <string name="behavior_review_question">What did I do?</string>
    <string name="people_review_question">Who was I with?</string>
    <string name="time_review_question">When did it happen?</string>
    <string name="place_review_question">Where did it happen?</string>
    <string name="logs_behavior_question">What was the unhelpful behavior?</string>
    <string name="logs_situation_question">Situation details:</string>
    <string name="logs_main_emotion_question">What was the main emotion experienced?</string>
    <string name="logs_emotion_intensity_question">Intensity rating:</string>
    <string name="log_additional_details">Additional details:</string>
    <string name="log_thoughts_question">Thoughts experienced:</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="sadness">Sadness</string>
    <string name="anger">Anger</string>
    <string name="fear">Fear</string>
    <string name="happiness">Happiness</string>
    <string name="pc_page_one_title">Behavior</string>
    <string name="pc_page_two_title">If I Change</string>
    <string name="pc_behavior_description">What is the behavior you want to change?</string>
    <string name="add_con">Add Con</string>
    <string name="add_pro">Add pro</string>
    <string name="cons">Cons</string>
    <string name="pros">Pros</string>
    <string name="pc_not_changing_question">How will not changing it impact my life?</string>
    <string name="required_text">(Required)</string>
    <string name="tj_emotion_details_description">Optional: go into details about how you felt.</string>
    <string name="tj_emotion_details_hint">I.e multiple emotions, bodily sensations, emotional actions, etc</string>
    <string name="emotion_intensity_description_general">Rate the intensity of the emotion on a scale of 1–5</string>
    <string name="emotions">Emotions</string>
    <string name="behavior_hint">Enter behavior or action here</string>
    <string name="prevention_action_description">What could I have done to prevent this from happening?</string>
    <string name="ib_page_one_title">What Happened?</string>
    <string name="radiobutton_yes">Yes</string>
    <string name="radiobutton_no">No</string>
    <string name="ib_page_two_title">Willingness</string>
    <string name="ib_willingness_description">Was I willing to do the preventative measure or action on the previous page?</string>
    <string name="ib_thought_title">Thought</string>
    <string name="ib_behavior_review_question">Unhelpful action or behavior</string>
    <string name="ib_barrier_type_review_question">Barrier type</string>
    <string name="ib_barrier_review_question">Barrier</string>
    <string name="ib_problem_solving_review_description">Review Answers and Problem Solve!</string>
    <string name="problem_solving_title_general">Problem Solve</string>
    <string name="ib_page_four_title">Final Barriers</string>
    <string name="add_thought_description">Add thought</string>
    <string name="add_thought_prompt">Add thoughts</string>
    <string name="high_page_one_title">What Happened?</string>
    <string name="behavior_hint_general">Enter the unhelpful behavior or action you engaged in here</string>
    <string name="prompting_event_hint_general">Enter what happened or what was going on</string>
    <string name="behavior_question_general">What was the behavior?</string>
    <string name="high_trigger_event_question">What was the trigger event that led you to engage in it?</string>
    <string name="high_emotion_question">What is the main emotion you felt before engaging?</string>
    <string name="thoughts_prior_question_general">What was going through your mind prior to engaging in the behavior or action?</string>
    <string name="vulnerability_title">Vulnerabilities</string>
    <string name="add_vulnerability_factors_description">Add vulnerability factors</string>
    <string name="high_vulnerability_question">What are some things going on (in yourself, others, or your environment) that made you vulnerable to engaging?</string>
    <string name="high_vulnerability_prompt">Add vulnerability factors</string>
    <string name="aftermath_title">Aftermath</string>
    <string name="consequences_prompt_general">Add consequences</string>
    <string name="relief_prompt_general">Add relief or benefits</string>
    <string name="high_consequences_question">What long term consequences will I face due to engaging?</string>
    <string name="high_relief_question">What short term relief or benefits did I get from engaging?</string>
    <string name="high_prevention_question">What are some things I can do to prevent myself from engaging next time?</string>
    <string name="add_preventive_measure">Add preventive measures</string>
    <string name="repair_question_general">What can I do to repair the situation in the short term?</string>
    <string name="repair_prompt_general">Add repair ideas</string>
    <string name="thoughts_experienced_log_question_general">What thoughts did you experience?</string>
    <string name="unhelpful_behavior_action_general">Unhelpful behavior/action:</string>
    <string name="trigger_event_general">Trigger event:</string>
    <string name="main_emotion_experienced_general">Main emotion experienced:</string>
    <string name="bb_behavior_question">What is the behavior that you would like to stop engaging in?</string>
    <string name="bb_behavior_hint">Enter the behavior here</string>
    <string name="general_behavior_title">Behavior</string>
    <string name="bb_environmental_factor_description">Add environmental factor</string>
    <string name="bb_add_change_prompt">Add change</string>
    <string name="bb_environmentals_question">What can you do about your space that can help prevent you from engaging? I.e moving triggering or dangerous material, going to another room, etc</string>
    <string name="bb_environmentals_title">Changing Places</string>
    <string name="bb_distractions_title">Changing Plans</string>
    <string name="bb_distractions_question">What can you do in the moment to distract you from engaging? I.e call a friend, participate in a hobby, etc</string>
    <string name="bb_add_distraction_description">Add distraction</string>
    <string name="bb_distraction_prompt">Add distraction</string>
    <string name="bb_solutions_title">Changing the Future</string>
    <string name="gp_dont_change_cons">Don\'t Change Cons</string>
    <string name="gp_dont_change_pros">Don\'t Change Pros</string>
    <string name="gp_change_cons">Change Cons</string>
    <string name="gp_change_pros">Change Pros</string>
    <string name="general_select_prompt">Select</string>
    <string name="focusing_past_title">Focusing on the Past</string>
    <string name="vp_fotp_description">Focusing on the past can cause us to experience unhelpful thoughts or emotions due to something that happened to us. This can even cause us to feel as if we are in distress or danger</string>
</resources>