<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.loopbreakr.cogstruct.howdigethere.HIGHViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".howdigethere.HIGHPageTwo">
    <View
        android:id="@+id/page_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/high_page_two_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="false"/>

    <TextView
        android:id="@+id/page_two_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/emotions"
        android:textColor="@color/colorGreenText"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/high_emotion_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/high_emotion_question"
        android:textColor="@color/colorGreenText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_two_title" />

    <RadioGroup
        android:id="@+id/high_emotion_radiogroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:checkedButton="@={viewModel.highEmotionRadioId}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/high_emotion_question">

        <RadioButton
            android:id="@+id/high_sadness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sadness"
            android:textColor="@color/lightGrey"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/high_anger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anger"
            android:textColor="@color/lightGrey"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/high_fear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fear"
            android:textColor="@color/lightGrey"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/high_happiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/happiness"
            android:textColor="@color/lightGrey"
            android:textSize="16sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/high_intensity_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/emotion_intensity_description_general"
        android:textColor="@color/colorGreenText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/high_emotion_radiogroup" />


    <RatingBar
        android:id="@+id/emotion_rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:rating="@={viewModel.highEmotionIntensity}"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/high_intensity_question" />

    <Button
        android:id="@+id/high_page_two_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button_background"
        android:text="@string/next_button_string"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="2dp"/>


    <TextView
        android:id="@+id/progress_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2/6"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        app:layout_constraintBaseline_toBaselineOf="@+id/high_page_two_back"
        app:layout_constraintEnd_toStartOf="@+id/high_page_two_next"
        app:layout_constraintStart_toEndOf="@+id/high_page_two_back"
        android:elevation="2dp"/>

    <Button
        android:id="@+id/high_page_two_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button_background"
        android:text="@string/back_button_text"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:elevation="2dp"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bottom_bar_background"
        android:paddingTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/page_content" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>